--- a/src/main/resources/applicationContext.properties
+++ b/src/main/resources/applicationContext.properties
@@ -24,10 +24,27 @@ jdbc.pool.maxActive=200
 
 #-----------------MYBATIS-GENERATOR 生成器配置参数-----------------#
 database_name=guanzf
+
+#tABLE_NAME=G_PRODUCE
+#DOMAIN_OBJECT_NAME=PRODUCE
+#---------------------------------------------
+#table_name=g_person
+#domain_object_name=Person
+#---------------------------------------------
 #table_name=g_person_produce
-table_name=g_user
-domain_object_name=User
 #domain_object_name=PersonProduce
+#---------------------------------------------
+#table_name=g_sys_dict
+#domain_object_name=SysDict
+#---------------------------------------------
+#table_name=g_User
+#domain_object_name=User
+#---------------------------------------------
+#table_name=g_message_manage
+#domain_object_name=MessageManage
+#---------------------------------------------
+table_name=g_friend
+domain_object_name=Friend
 #-----------------MYBATIS-GENERATOR 生成器配置参数-----------------#
 
 
