--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,4 +1,10 @@
 #默认的用户选择头像图片,路径使用","分开
 DEFAULT_USER_IMAGE_URL=/images/a6.jpg,/images/a5.jpg,/images/a4.jpg,/images/a3.jpg,/images/a2.jpg,/images/a1.jpg
 
+#设置上传图片路径信息
+UPLOAD_IMAGE=/images/upload/
+HANDLE_UPLOAD_IMAGE=/images/uploadHandle/
+
 cron_quartz_test=0/5 * * * * ?
+#每天的24点清空商品今日购买的数据信息
+cron_quartz_clear_produce_today_data=0 0 0 * * ? 
